ISAICP-2337: Fix spacing of the checkbox item on the login page

--- a/web/themes/joinup/prototype/sass/components/_form.sass
+++ b/web/themes/joinup/prototype/sass/components/_form.sass
@@ -37,6 +37,9 @@
   +breakpoint(tablet)
     margin: 8px
 
+.form-item-persistent-login
+  margin-bottom: 20px
+
 // Modifiers
 // --------------------------------------------------
 .form__description--checkbox
